<resources>
    <string name="profile_name">Name</string>
    <string name="profile_hint_name"><i>Example</i></string>
    <string name="profile_birthday">Birthday</string>
    <string name="profile_hint_birthday"><i>00/00/0000</i></string>
    <string name="profile_email">Email</string>
    <string name="profile_hint_email"><i>a@example.com</i></string>
    <string name="profile_weight">Weight</string>
    <string name="profile_height">Height</string>
    <string name="profile_ibm">Your IBM:</string>
    <string name="profile_ok">Oke</string>
    <string name="profile_title">My Profile</string>
    <string name="profile_info">Enter the height and weight to calculate IBM </string>
    <string name="profile_hint_weight"><i>0.0</i></string>
    <string name="profile_hint_height"><i>0</i></string>
    <string name="profile_gender">Gender</string>
    <string name="main_error_date">Can\'t choose a date in the future</string>
    <string name="main_lever_normal">Normal</string>
    <string name="main_lever_underweight">Underweight</string>
    <string name="main_lever_overweight">Overweight</string>
    <string name="main_lever_fat">Fat</string>
    <string name="main_save_success">Save Success</string>
    <string name="main_error_email">Invalided email</string>
    <string name="main_error_permission">Permission isn\'t granted</string>
    <string name="main_error_permission1">Permission don\'t granted and don\'t show dialog again</string>
    <string name="main_error_picture">You haven\'t picked Image</string>
    <string name="app_name">App1</string>
    <string name="reminder_repeat">Repeat</string>
    <string name="profile_reminder">Reminder</string>


    <!--region period-->
    <string name="on_boarding_title">Period Tracker</string>
    <string name="on_boarding_content">Please give uss some information so we can track the cycle for you in the faster and most accurate way!</string>
    <string name="on_boarding_hello"><b>Hello my lady!</b></string>
    <string name="choose_cycle_question1">HOW LONG IS YOU PERIOD?</string>
    <string name="choose_cycle_question2">HOW MANY DAYS BETWEEN 2 PERIOD?</string>
    <string name="choose_cycle_note1">Menstrual period usually lasts 4-7 days</string>
    <string name="choose_cycle_note2">The interval between two periods usually lasts 22-35 days</string>
    <string name="all_days">Days</string>
    <string name="choose_day_note">* If you don\'t remember correctly, you can adjust information in the Edit Cycle section of Settings</string>
    <string name="choose_day_question">WHEN DOES YOUR LAST PRERIOD BEGIN?</string>
    <string name="all_next">Next</string>
    <!--endregion-->


</resources>
