<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"

    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp4">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toobal1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF" />
    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp150">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/dp104"
            android:layout_height="@dimen/dp104"
            android:layout_gravity="center"
            android:background="@android:color/white"
            app:srcCompat="@drawable/profile_ic_person"
            tools:ignore="VectorDrawableCompat" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp44"
            android:layout_marginTop="@dimen/dp44"
           app:srcCompat="@drawable/avata_ic_camera"
            tools:ignore="VectorDrawableCompat" />
    </FrameLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:layout_marginBottom="@dimen/dp12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp14"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp36"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp53"
                    android:layout_height="@dimen/dp32"
                    android:layout_marginLeft="@dimen/dp16"
                    android:gravity="left|center"
                    android:text="@string/profile_name"
                    android:textSize="@dimen/sp14" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp12"
                    android:layout_marginRight="@dimen/dp16"
                    android:background="@color/gray_back"
                    android:gravity="left|center"
                    android:hint="@string/profile_hint_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingRight="@dimen/dp10"
                    android:textColor="@color/gray_text"
                    android:textColorHint="@color/gray_hint"
                    android:textSize="@dimen/sp14" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp36"
                android:layout_marginTop="@dimen/dp14"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp53"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp16"
                    android:gravity="center|left"
                    android:text="@string/profile_birthday"
                    android:textSize="@dimen/dp14" />

                <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp12"
                    android:layout_marginRight="@dimen/dp16"
                    android:background="@color/gray_back"
                    android:gravity="left|center"
                    android:hint="@string/profile_hint_birthday"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingTop="@dimen/dp4"
                    android:paddingRight="@dimen/dp10"
                    android:textColor="@color/gray_text"
                    android:textColorHint="@color/gray_hint"
                    android:textSize="@dimen/sp14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp36"
                android:layout_marginTop="@dimen/dp14"
                android:layout_marginBottom="@dimen/dp16"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp53"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp16"
                    android:gravity="left|center"
                    android:text="@string/profile_email"
                    android:textSize="@dimen/dp14" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp12"
                    android:layout_marginRight="@dimen/dp16"
                    android:background="@color/gray_back"
                    android:gravity="left|center"
                    android:hint="@string/profile_hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingRight="@dimen/dp10"
                    android:textColor="@color/gray_text"
                    android:textColorHint="@color/gray_hint"
                    android:textSize="@dimen/sp14" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp44"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|left"
                    android:layout_marginLeft="@dimen/dp24"
                    app:srcCompat="@drawable/ic_weight_scale"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="@dimen/dp53"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp16"
                    android:gravity="left|center"
                    android:text="@string/profile_weight"
                    android:textSize="@dimen/sp14"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp24"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:hint="@string/profile_hint_weight"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:textColor="@color/gray_text"
                        android:textColorHint="@color/gray_hint"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp10"
                        android:layout_marginRight="@dimen/dp24"
                        android:background="@android:color/transparent"
                        android:gravity="right|center"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:text="kg"
                        android:textSize="@dimen/sp14" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp44"
                android:layout_marginTop="@dimen/dp16"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dp24"
                        app:srcCompat="@drawable/profile_ic_height"
                        tools:ignore="VectorDrawableCompat" />

                    <TextView
                        android:layout_width="@dimen/dp53"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp16"
                        android:gravity="left|center"
                        android:text="@string/profile_height"
                        android:textSize="@dimen/sp14"
                        android:textStyle="bold" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right">

                        <EditText
                            android:id="@+id/et_height"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/dp24"
                            android:background="@android:color/transparent"
                            android:hint="@string/profile_hint_height"
                            android:inputType="numberDecimal"
                            android:maxLines="1"
                            android:textColor="@color/gray_text"
                            android:textColorHint="@color/gray_hint"
                            android:textSize="@dimen/sp14" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/dp10"
                            android:layout_marginRight="@dimen/dp24"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:inputType="numberDecimal"
                            android:maxLines="1"
                            android:text="cm"
                            android:textColorHint="@color/gray_hint"
                            android:textSize="@dimen/sp14" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp44"
                android:layout_marginTop="@dimen/dp16"
                android:layout_marginBottom="@dimen/dp10"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp24"
                    app:srcCompat="@drawable/ic_profile_ic_gender"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="@dimen/dp53"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp16"
                    android:gravity="left|center"
                    android:text="@string/profile_gender"
                    android:textSize="@dimen/sp14"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right">
                    <Spinner
                        android:id="@+id/id_spanner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dp24"></Spinner>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_ibm"
                android:textSize="@dimen/sp14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/et_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:textColor="@color/pink"
                android:textSize="@dimen/sp14"
                android:visibility="gone" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_ibm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp10"
                android:textColor="@color/pink"
                android:textSize="@dimen/sp50"
                android:textStyle="bold"
                android:visibility="invisible"
                tools:text="2.0" />

            <TextView
                android:id="@+id/tv_infor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile_info"
                android:textColor="@color/red_info"
                android:textSize="@dimen/sp12"
                android:visibility="visible" />

        </FrameLayout>
    </LinearLayout>

</LinearLayout>